# fun-backend-service

./: .gitignore  README.md  manage.py  pyproject.toml  pytest.ini
algorithms/tests/: test_quicksort.py  test_sort.py
algorithms/utils/: __init__.py  quick.py  sort.py
docker/: Dockerfile
funproject/: asgi.py  settings.py  urls.py  wsgi.py
