[tool.poetry]
name = "fun-backend-service"
version = "0.1.0"
description = ""
authors = ["Leonid Adolph Guadalupe <leonidguadalupe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
pytest-cov = "^2.8.1"
pytest-django = "^3.8.0"
pytest-xdist = "^1.31.0"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
